# hoxServer

./: Makefile  README.md  do_backup.sh
dbagent/: CMakeLists.txt  Makefile  dbagent.kdev4  hoxDBAPI.cpp  hoxDBAPI.h  (+14 more)
hoxTest/: CMakeLists.txt  games.txt  hoxTest.kdev4  run.sh  server.cfg
hoxTest/src/: AIPlayer.cpp  AIPlayer.h  Manager.cpp  Manager.h  Player.cpp  Player.h  TestPlayer.cpp  TestPlayer.h  hoxCommand.cpp  hoxCommand.h  hoxCommon.cpp  hoxCommon.h  hoxDebug.cpp  hoxDebug.h  hoxExcept.cpp  hoxExcept.h  hoxLog.cpp  hoxLog.h  hoxSocketAPI.cpp  hoxSocketAPI.h  main.cpp  main.h  session.cpp
plugins/: CMakeLists.txt  plugins.kdev4
plugins/AI_Folium/: AI_Folium.cpp  AI_Folium.vcproj  Makefile  Makefile.osx  bitmap.h  bitmap_data.cpp  defines.h  engine_data.cpp  engine_data.h  folEngine.cpp  folEngine.h  folHOXEngine.cpp  folHOXEngine.h  folSearch.cpp  generator.cpp  generator.h  hash.cpp  hash.h  history.h  history_data.cpp  int.h  killer.h  move.cpp  move.h  movelist.h  xq.cpp  xq.h  xq_data.cpp  xq_data.h
plugins/AI_HaQiKiD/: AI_HaQiKiD.cpp  AI_HaQiKiD.vcproj  Makefile  Makefile.osx  haqikidHOX.cpp  haqikidHOX_ORIGINAL.c
plugins/AI_MaxQi/: AI_MaxQi.cpp  AI_MaxQi.vcproj  Makefile  Makefile.osx  MaxQi.cpp  MaxQi.h
plugins/AI_TSITO/: AI_TSITO.cpp  AI_TSITO.vcproj  Board.cpp  Board.h  Evaluator.cpp  Evaluator.h  HashTable.h  Lawyer.cpp  Lawyer.h  Makefile  Makefile.osx  Move.cpp  Move.h  OpeningBook.cpp  OpeningBook.h  Options.cpp  Options.h  Timer.cpp  Timer.h  Transposition.cpp  Transposition.h  tsiEngine.cpp  tsiEngine.h
plugins/AI_XQWLight/: AI_XQWLight.cpp  AI_XQWLight.vcproj  Makefile  Makefile.osx  XQWLight.cpp  XQWLight.h
plugins/common/: AIEngineLib.h  DefaultDelete.h
server/: CMakeLists.txt  Makefile  hoxDbClient.cpp  hoxDbClient.h  hoxDebug.cpp  hoxDebug.h  hoxEnums.h  hoxExcept.cpp  hoxExcept.h  hoxFileMgr.cpp  hoxFileMgr.h  hoxLog.cpp  hoxLog.h  hoxMove.cpp  hoxMove.h  hoxPlayer.cpp  hoxPlayer.h  hoxReferee.cpp  hoxReferee.h  hoxSession.cpp  hoxSession.h  hoxSessionMgr.cpp  hoxSessionMgr.h  hoxSocketAPI.cpp  hoxSocketAPI.h  hoxTable.cpp  hoxTable.h  hoxTypes.cpp  hoxTypes.h  hoxUtil.cpp  hoxUtil.h  main.cpp  main.h  run.sh  server.cfg  server.kdev4  session.cpp
(+1 files in other folders)
